<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="main_button_disable_wifi">Disable WiFi</string>
    <string name="main_button_enable_wifi">Enable WiFi</string>
    <string name="main_label_app_description">This app allows you to enable and disable WiFi.</string>
    <string name="main_label_compatibility_description">It contains an old compatibility version to make it possible to work with wifi.</string>
    <string name="main_label_github_description">The code source is available on GitHub, where you download the app.</string>
</resources>